<resources>
    <string name="app_name">Work ID</string>
    <string name="facebook_app_id">1292088657825384</string>
    <string name="fb_login_protocol_scheme">fb1292088657825384</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_contact">Contact</string>
    <string name="title_setting">Setting</string>
    <string name="btn_skip">Login</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="message_welcome">Welcome to Work ID</string>
    <string name="action_login">Login</string>
    <string name="action_create_account">Create Account</string>
    <string name="sign_in_with">Or sign up with your social account</string>
    <string name="action_sign_in">Don\'t have an account? Sign up</string>
    <string name="incoming_message">Incoming %1$s request from %2$s …</string>
    <string name="outgoing_message">Đang nối máy tới %1$s…</string>
    <string name="first_slide_title">Free calls and conferences</string>
    <string name="first_slide_header">
We are offering free high-quality services for individual, mini call, and conference call with less than 5 participants. However, if you need bigger room, it will cost you less than a dollar.
    </string>
    <string name="second_slide_title">New level of safety and quality</string>
    <string name="third_slide_title">Not just an app, it is a lifestyle</string>
    <string name="second_slide_header">
We take pride in providing high level of quality and safety to our clients. Our team is dedicated to protecting your privacy and data as you navigate and communicate through our system.
    </string>
    <string name="third_slide_header">
This is not just another calling application or conference platform. What we offer is an innovative way to make friends, expand your social interactions, work efficiently, and do better business.    </string>
    <string name="action_call">Calling…</string>
    <string name="message_call_end">Call Ended.</string>
    <string name="outgoing_group_call">Đang thiết lập gọi nhóm…</string>
    <string name="notification_call_message">WorkID %1$s Call…</string>
    <string name="title_activity_user_detail2">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="christian_charles_n_philip_bale">Christian Bale</string>
    <string name="christian_bale">Christian Bale</string>
    <string name="user_name">Tran Quang Minh</string>
    <string name="user_last_seen">last seen recently</string>
    <string name="invalid_user_email">Invalid email</string>
    <string name="invalid_password">Password is not strong enough</string>
    <string name="sign_in_with_email_and_password_failed">Password invalid or username are not exist</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="message_term_and_policy">By signing up you agree to our Terms and that you have read our \"Privacy Policy\"</string>
    <string name="create_my_work_id">Create my Work ID</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an account</string>
    <string name="invalid_email">Invalid email, please try again</string>
    <string name="email_existed">Email is existed,please use another email</string>
    <string name="password_rules">
         "Password must:\n"
            "⚬ Have at least 6 characters.\n"
            "⚬ Have at least 1 letter (a,b,c).\n"
            "⚬ Have at least 1 number (1,2,3).\n"
            "⚬ Have at least 1 special character (!,@,# …).\n"
            "⚬ Include both uppercase and lowercase characters"
    </string>
    <string name="password_not_match">Confirm password doesn\'t match</string>
    <string name="search_by_work_id">Enter an ID or phone number to search and find friends.</string>
    <string name="welcome_message">Welcome, %1$s</string>
    <string name="search_bar_hint">Enter Work ID or email address</string>
    <string name="people_you_may_know">People you may know</string>
    <string name="work_id">WorkID: %1$s</string>
    <string name="my_friends">My friends</string>
    <string name="search_result">Result</string>
    <string name="send_message">Send message…</string>
    <string name="action_add_friend">Add friend</string>
    <string name="send_instruction">Send Verification Email</string>
    <string name="create_an_new_password">Create An New Password</string>
    <string name="reset_password">Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_of_search_results">List of search results</string>
    <string name="history_call_time">Yesterday</string>
    <string name="explore">Explore</string>
    <string name="rejected_call">Rejected Call</string>
    <string name="group_calling">Group Calling</string>
    <string name="call_rejected">Call rejected.</string>
    <string name="user_not_available">User are not available at the moment</string>
    <string name="no_result_found">No result found</string>
    <string name="title_history">History</string>
</resources>