<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_ico_home_shape"
        android:title="@string/title_home"
        tools:targetApi="o" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_phone"
        android:title="@string/title_history"
        tools:targetApi="o" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_user_icon"
        android:title="@string/title_setting"
        tools:targetApi="o" />

</menu>