<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.workid.activities.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_home_to_addFriendPopup"
            app:destination="@id/addFriendPopup" />
        <action
            android:id="@+id/action_navigation_home_to_userDetailFragment"
            app:destination="@id/userDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.workid.activities.main.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.workid.activities.main.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.workid.activities.main.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
    <dialog
        android:id="@+id/searchFragment"
        android:name="com.workid.activities.event.search.SearchFragment"
        android:label="SearchFragment"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_addFriendPopup"
            app:destination="@id/addFriendPopup" />
        <action
            android:id="@+id/action_searchFragment_to_userDetailFragment"
            app:destination="@id/userDetailFragment" />
    </dialog>

    <fragment
        android:id="@+id/addFriendPopup"
        android:name="com.workid.activities.event.addFriend.AddFriendDialog"
        android:label="AddFriendPopup"
        tools:layout="@layout/add_friend_popup"/>
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.workid.activities.main.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/userDetailFragment"
        android:name="com.workid.activities.userDetails.UserDetailFragment"
        android:label="UserDetailFragment"
        tools:layout="@layout/fragment_user_detail"/>

</navigation>